add sukharev dispersion results

--- a/figs/roadmaps-dispersion/dispersion-herb.tex
+++ b/figs/roadmaps-dispersion/dispersion-herb.tex
@@ -20,6 +20,9 @@
 \addplot [black] table[x=npoints, y=dispersion]
    {data/roadmaps-dispersion/stats-herb-halton.txt};
 
+\addplot [green] table[x=npoints, y=dispersion]
+   {data/roadmaps-dispersion/stats-herb-incsukharev.txt};
+
 \end{loglogaxis}
 \end{tikzpicture}
 \end{document}
