--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -240,7 +240,9 @@ Deterministic sampling and dispersion:
 \begin{figure}
    \centering
    \includegraphics{build/roadmaps-dispersion/dispersion}
-   \caption{Dispersion plot.}
+   \caption{Dispersion plot on the unit square.
+      Green is the dispersion of an incremental (greedy) Sukharev
+      grid.}
 \end{figure}
 
 \begin{figure}
