--- a/figs/roadmaps-dispersion/dispersion-irb4400.tex
+++ b/figs/roadmaps-dispersion/dispersion-irb4400.tex
@@ -20,6 +20,9 @@
 \addplot [black] table[x=npoints, y=dispersion]
    {data/roadmaps-dispersion/stats-irb4400-halton.txt};
 
+\addplot [green] table[x=npoints, y=dispersion]
+   {data/roadmaps-dispersion/stats-irb4400-incsukharev.txt};
+
 \end{loglogaxis}
 \end{tikzpicture}
 \end{document}
