tiny loglog caption fix

--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -822,7 +822,7 @@ by the algorithm are a function only of their (constant) lengths.
       \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
-      The IncBi-Old results used $R=2.5$ scaled by $1/n$.
+      The IncBi-Old results used $R=2.5$ scaled by $\log(\log(n))/n$.
       The new results use $R\approx2.17$ scaled by $\log(n)/n$.}
    \label{fig:family:workcell-pvx}
 \end{figure}
