add workcell plot with old roadmap params

--- a/figs/multistep-prescribed/herbbin.tex
+++ b/figs/multistep-prescribed/herbbin.tex
@@ -38,31 +38,31 @@
    \addplot
       plot[color=blue,densely dotted,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-haltonoffdens10000,0.9-lambda.txt};
    \addplot
       plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-haltonoffdens10000,0.9-lambda.txt};
    
    % astar results
    \addplot
       plot[color=olive,densely dotted,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-haltonoffdens10000,0.9-lambda.txt};
    \addplot
       plot[color=olive,solid,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-haltonoffdens10000,0.9-lambda.txt};
    
    % lpastar results
    \addplot
       plot[color=cyan,densely dotted,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-haltonoffdens10000,0.9-lambda.txt};
    \addplot
       plot[color=cyan,solid,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
    
    
    
