--- a/figs/multistep-prescribed/workcell-r1p3128ll.tex
+++ b/figs/multistep-prescribed/workcell-r1p3128ll.tex
@@ -12,41 +12,42 @@
    ylabel near ticks,
    xmin=0,
    ]
-
+   
+   % rrt results (new)
    \addplot
       plot[color=red,mark options={color=red},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-workcell-rrtconnect-default.txt};
-
+   
    % incbi results
    \addplot
       plot[color=blue,densely dotted,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-lemur-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-incbi-haltonoffdens10000,1.3128-lambda.txt};
    \addplot
       plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-family-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-family-incbi-haltonoffdens10000,1.3128-lambda.txt};
    
    % astar results
    \addplot
       plot[color=olive,densely dotted,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-lemur-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-astar-haltonoffdens10000,1.3128-lambda.txt};
    \addplot
       plot[color=olive,solid,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-family-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-family-astar-haltonoffdens10000,1.3128-lambda.txt};
    
    % lpastar results
    \addplot
       plot[color=cyan,densely dotted,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-lemur-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-lpastar-haltonoffdens10000,1.3128-lambda.txt};
    \addplot
       plot[color=cyan,solid,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-workcell-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-workcell-family-lpastar-haltonoffdens10000,1.3128-lambda.txt};
    
 \end{axis}
 \end{tikzpicture}
