--- a/figs/multistep-prescribed/workcell.tex
+++ b/figs/multistep-prescribed/workcell.tex
@@ -27,6 +27,14 @@
       plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-workcell-family-incbi-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-incbi-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-family-incbi-haltonoffdens10000,0.9-lambda.txt};
    
    % astar results
    \addplot
@@ -37,6 +45,14 @@
       plot[color=olive,solid,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-workcell-family-astar-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-astar-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-family-astar-haltonoffdens10000,0.9-lambda.txt};
    
    % lpastar results
    \addplot
@@ -46,6 +62,14 @@
    \addplot
       plot[color=cyan,solid,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
+      {data/multistep-prescribed/stats-byparam-workcell-lemur-lpastar-haltonoffdens10000,0.9-lambda.txt};
+   \addplot
+      plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
+      table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-workcell-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
    
 \end{axis}
