multistep-prescribed: add attempted replication of herbbin incbi results

--- a/thesis-ch02-roadmaps.tex
+++ b/thesis-ch02-roadmaps.tex
@@ -223,13 +223,16 @@ Scaling radii:
 \end{equation}
 
 \begin{verbatim}
-robot: HERB (n=10000)
-radius log_n: 2.825833
-radius loglog_n: 2.306115
+robot: HERB
+gamma_c_star: 7.670459
+radius log_n: 2.825833 (n=10000)
+radius loglog_n: 2.306115 (n=10000)
+radius 1_n: 2.057751 (n=10000)
 
-robot: IRB4400 (n=10000)
-radius log_n: 2.413850
-radius loglog_n: 1.904293
+robot: IRB4400
+gamma_c_star: 7.738634
+radius log_n: 2.413850 (n=10000)
+radius loglog_n: 1.904293 (n=10000)
 \end{verbatim}
 
 \subsection{Dispersion}
