--- a/figs/multistep-prescribed/herbbin-r0p9719o.tex
+++ b/figs/multistep-prescribed/herbbin-r0p9719o.tex
@@ -23,60 +23,70 @@
       plot[color=red,mark options={color=red},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
       {data/multistep-prescribed/stats-byparam-herbbin-rrtconnect-default.txt};
-
+   
+   % old incbi results
+   \addplot
+      plot[color=teal,densely dotted,mark options={color=teal},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/old-stats-byparam-herbbin-lemurhaltonofflldens10000,2.0-lambda.txt};
+   \addplot
+      plot[color=teal,solid,mark options={color=teal},mark options={scale=0.5}]
+      table[x=python-totaltime-finmean,y=path-length-finmean]
+      {data/multistep-prescribed/old-stats-byparam-herbbin-familyhaltonofflldens10000,2.0-lambda.txt};
+   
    % incbi results
    \addplot
       plot[color=blue,densely dotted,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=blue,solid,mark options={color=blue},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-incbi-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-incbi-haltonoffdens10000,0.9719-lambda.txt};
    
    % astar results
    \addplot
       plot[color=olive,densely dotted,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=olive,solid,mark options={color=olive},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-astar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-astar-haltonoffdens10000,0.9719-lambda.txt};
    
    % lpastar results
    \addplot
       plot[color=cyan,densely dotted,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=cyan,solid,mark options={color=cyan},mark options={scale=0.5}]
       table[x=python-totaltime-finmean,y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,densely dotted,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-lemur-lpastar-haltonoffdens10000,0.9719-lambda.txt};
    \addplot
       plot[color=black,solid,mark options={color=black},mark options={scale=0.5}]
       table[x expr=\thisrow{python-totaltime-finmean} - \thisrow{planner-dur-search-finmean},y=path-length-finmean]
-      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-haltonoffdens10000,0.9-lambda.txt};
+      {data/multistep-prescribed/stats-byparam-herbbin-family-lpastar-haltonoffdens10000,0.9719-lambda.txt};
 
 \end{axis}
 \end{tikzpicture}
