--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -885,12 +885,30 @@ by the algorithm are a function only of their (constant) lengths.
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
       \protect\tikz{\protect\node[fill=red,draw=black]{};}\;RRT,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
+      \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
+      These results use $R\approx2.54$ scaled by $\log(n)/n$.
+      }
+\end{figure}
+
+\begin{figure}
+   \centering
+   \includegraphics{build/multistep-prescribed/herbbin-r0p9719o}
+   \caption{Example of planning over families for the HERB bin example
+      problem.
+      Individual LEMUR results are dashed
+      (\protect\tikz{\protect\draw[thick,densely dotted] (0,0) -- (0.15,0.15);}),
+      while Family-aware results are solid
+      (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
+      Colors for the inner search algorithm are:
+      \protect\tikz{\protect\node[fill=red,draw=black]{};}\;RRT,
       \protect\tikz{\protect\node[fill=teal,draw=black]{};}\;IncBi-Old,
       \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
-      The IncBi-Old results used $R=2.0$ scaled by $1/n$.
-      The new results use $R\approx2.54$ scaled by $\log(n)/n$.
+      These results use $R=2.0$ scaled by $1/n$.
+      Perhaps the IncBi-Old results are from my laptop instead?
       }
 \end{figure}
 
