--- a/thesis-ch06-family.tex
+++ b/thesis-ch06-family.tex
@@ -818,9 +818,9 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
-      \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
-      \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
+      \protect\tikz{\protect\node[fill=purple,draw=black]{};}\;Heuristic IBiD,
+      and \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*.
       These results use $R\approx2.17$ scaled by $\log(n)/n$.}
    \label{fig:family:workcell-pvx}
 \end{figure}
@@ -837,9 +837,9 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
-      \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
-      \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
+      \protect\tikz{\protect\node[fill=purple,draw=black]{};}\;Heuristic IBiD,
+      and \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*.
       These results use $R=2.5$ scaled by $\log(\log(n))/n$.}
    \label{fig:family:workcell-pvx}
 \end{figure}
@@ -885,7 +885,7 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
       These results use $R\approx2.54$ scaled by $\log(n)/n$.
@@ -903,12 +903,12 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=teal,draw=black]{};}\;IncBi-Old,
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=teal,draw=black]{};}\;IBiD-Old,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
       These results use $R=2.0$ scaled by $1/n$.
-      Perhaps the IncBi-Old results are from my laptop instead?
+      Perhaps the IBiD-Old results are from my laptop instead?
       }
 \end{figure}
 
@@ -923,7 +923,7 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
       These results use $R\approx2.54$ scaled by $\log(n)/n$.
@@ -941,12 +941,12 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=teal,draw=black]{};}\;IncBi-Old,
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=teal,draw=black]{};}\;IBiD-Old,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
       These results use $R=2.0$ scaled by $1/n$.
-      Perhaps the IncBi-Old results are from my laptop instead?
+      Perhaps the IBiD-Old results are from my laptop instead?
       }
 \end{figure}
 
@@ -961,7 +961,7 @@ by the algorithm are a function only of their (constant) lengths.
       while Family-aware results are solid
       (\protect\tikz{\protect\draw[thick,solid] (0,0) -- (0.15,0.15);}),.
       Colors for the inner search algorithm are:
-      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IncBi,
+      \protect\tikz{\protect\node[fill=blue,draw=black]{};}\;IBiD,
       \protect\tikz{\protect\node[fill=olive,draw=black]{};}\;A*, and
       \protect\tikz{\protect\node[fill=cyan,draw=black]{};}\;LPA*.
       These results use $R\approx2.54$ scaled by $\log(n)/n$.
